Fixed spacing on event list

--- a/style.css
+++ b/style.css
@@ -866,9 +866,11 @@ header .nav-login a {
 }
 
 #upcomingevents {
+	margin-top: 14px;
 }
 
 #previousevents {
+	margin-top: 14px;
 	display: none;
 }
 
